# flowstation

./: .gitignore  CONTROL_ROOM_AUTH_TOKEN_APPLY.md  CONTROL_ROOM_CORE_SNIPPET.md  CONTROL_ROOM_NATIVE_UI_APPLY.md  CONTROL_ROOM_NATIVE_UI_V3_APPLY.md  CONTROL_ROOM_NATIVE_UI_V4_1_APPLY.md  CONTROL_ROOM_NATIVE_UI_V4_3_APPLY.md  CONTROL_ROOM_RBAC_APPLY.md  CONTROL_ROOM_UI_V5_11_1_STATUS_TABLEAU_BUILD_FIX_APPLY.md  CONTROL_ROOM_UI_V5_11_4_STATUS_TABLEAU_BUILDFIX_APPLY.md  CONTROL_ROOM_UI_V5_11_7_DIRECTORY_FIRST_STATUS_LAYOUT_APPLY.md  CONTROL_ROOM_UI_V5_11_8_STATUS_TABLEAU_FINAL_FIX_APPLY.md  CONTROL_ROOM_UI_V5_11_STATUS_TABLEAU_APPLY.md  CONTROL_ROOM_UI_V5_12_2_DIRECTORY_DEEP_INDEX_APPLY.md  CONTROL_ROOM_UI_V5_6_ELP_LAYOUT_APPLY.md  CONTROL_ROOM_UI_V5_7_RESPONSIVE_FIX_APPLY.md  CONTROL_ROOM_UI_V5_9_1_BUILD_FIX_APPLY.md  CONTROL_ROOM_UI_V5_9_3_NAV_FIX_APPLY.md  CONTROL_ROOM_UI_V5_9_CLEAN_WORKPLACE_APPLY.md  CONTROL_ROOM_USER_LOGIN_RBAC_APPLY.md  CONTROL_ROOM_V5_14_DIRECTORY_API_PULL_APPLY.md  Cargo.toml  README.md  VERIFY_V5_14_2_NO_RESOLVED_LEN.sh  config.toml  config.toml.fallback  devices.json  netcore-control-room-node.git.patch  sds_log.json
bins/netcore-control-room/: Cargo.toml  README.md
bins/netcore-control-room/src/: auth.rs  config.rs  http.rs  main.rs  operations.rs  persistence.rs  server.rs  state.rs  webui.rs  ws.rs
crates/tetra-entities/: Cargo.toml  build.rs
crates/tetra-entities/src/: legacy_wap.rs  lib.rs  messagerouter.rs
crates/tetra-entities/tests/: test_call_restore_runtime.rs  test_cmce_bs.rs  test_ltpd_runtime.rs  test_managed_call_control_protocol.rs  test_media_bridge.rs  test_mle_cell_change_runtime.rs  test_mm_bs.rs  test_mm_mobility_runtime.rs  test_tlmc_runtime.rs  test_two_cell_call_restore.rs  test_two_cell_foundation.rs  test_two_cell_mm_mobility.rs  test_two_cell_mobility.rs  test_umac_bs.rs  test_umac_ms.rs
system-backend/application-gateway/: Cargo.toml  README.md
system-backend/application-gateway/config/: application-gateway.example.toml
system-backend/application-gateway/docs/: architecture.md  connector-contract.md  lxc-deployment.md  migration-from-tbs.md  open-lab-mode.md
system-backend/application-gateway/install/: install.sh  uninstall.sh  update.sh
system-backend/application-gateway/src/: config.rs  http.rs  main.rs  model.rs  state.rs  worker.rs
system-backend/application-gateway/systemd/: netcore-application-gateway.service
system-backend/application-gateway/tests/: application_gateway_reference.py
system-backend/call-control/: Cargo.toml  README.md
system-backend/call-control/config/: call-control.example.toml
system-backend/call-control/docs/: call-model.md  call-restore.md  floor-control.md  lxc-deployment.md  open-lab-mode.md
system-backend/call-control/install/: install.sh  uninstall.sh  update.sh
system-backend/call-control/src/: config.rs  gateway.rs  http.rs  main.rs  state.rs
system-backend/call-control/systemd/: netcore-call-control.service
system-backend/call-control/tests/: open_lab_api_examples.md
system-backend/control-room/operator/: Cargo.toml  README.md
system-backend/control-room/ui/: Cargo.toml  README.md  clean-build-ui.cmd.example  netcore-control-room-ui.desktop  start-ui.cmd.example
system-backend/ip-gateway/: Cargo.toml  README.md
system-backend/ip-gateway/config/: ip-gateway.example.toml
system-backend/ip-gateway/docs/: architecture.md  dns-wap-test.md  firewall-nat.md  lxc-deployment.md  open-lab-mode.md  packet-capture.md
system-backend/ip-gateway/install/: install.sh  uninstall.sh  update.sh
system-backend/ip-gateway/src/: config.rs  dataplane.rs  dns.rs  http.rs  kernel.rs  main.rs  packet_core.rs  protocol.rs  runtime.rs  state.rs  tun.rs
system-backend/ip-gateway/systemd/: netcore-ip-gateway.service
system-backend/ip-gateway/tests/: open_lab_api_examples.md
system-backend/kmf/: Cargo.toml  README.md
system-backend/kmf/docs/: architecture.md  key-lifecycle.md  lxc-deployment.md  open-lab-mode.md  otar-workflow.md  vault-backup-hsm.md
system-backend/kmf/install/: install.sh  uninstall.sh  update.sh
system-backend/kmf/src/: config.rs  crypto.rs  http.rs  main.rs  protocol.rs  state.rs
system-backend/kmf/systemd/: netcore-kmf.service
system-backend/kmf/tests/: lab_edge_unwrap.py  open_lab_api_examples.md
system-backend/media-library/: Cargo.toml  README.md
system-backend/media-library/config/: media-library.example.toml
system-backend/media-library/docs/: architecture.md  codec-contract.md  lxc-deployment.md  open-lab-mode.md  storage-format.md
system-backend/media-library/install/: install.sh  uninstall.sh  update.sh
system-backend/media-library/src/: config.rs  http.rs  main.rs  media.rs  model.rs  state.rs  worker.rs
system-backend/media-library/systemd/: netcore-media-library.service
system-backend/media-library/tests/: media_library_reference.py
system-backend/media-switch/: Cargo.toml  README.md
system-backend/media-switch/config/: media-switch.example.toml
system-backend/media-switch/docs/: jitter-buffer.md  lxc-deployment.md  media-routing.md  open-lab-mode.md  recorder-player-interfaces.md
system-backend/media-switch/install/: install.sh  uninstall.sh  update.sh
system-backend/media-switch/src/: call_control.rs  config.rs  gateway.rs  http.rs  main.rs  protocol.rs  state.rs
system-backend/media-switch/systemd/: netcore-media-switch.service
system-backend/media-switch/tests/: open_lab_api_examples.md
system-backend/mobility-core/: Cargo.toml  README.md
system-backend/mobility-core/config/: mobility-core.example.toml
system-backend/mobility-core/docs/: context-transfer.md  lxc-deployment.md  open-lab-mode.md
system-backend/mobility-core/install/: install.sh  uninstall.sh  update.sh
system-backend/mobility-core/src/: config.rs  gateway.rs  http.rs  (+3 more)
system-backend/observability/: Cargo.toml  README.md
system-backend/recorder/: Cargo.toml  README.md
system-backend/sds-router/: Cargo.toml  README.md
system-backend/security-core/: Cargo.toml  README.md
system-backend/transit/: Cargo.toml  README.md
(+662 files in other folders)
