[package]
name = "netcore-control-room"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "netcore-control-room"
path = "src/main.rs"


[features]
# Keep this no-op feature so habitual workspace commands such as
# `cargo build -p netcore-control-room --features asterisk` do not accidentally
# pull voice-codec/native base-station dependencies into the Control Room LXC.
default = []
asterisk = []

[dependencies]
tetra-core = { workspace = true }
tetra-entities = { workspace = true, default-features = false }

clap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
tungstenite = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
