[package]
name = "tetra-entities"
version.workspace = true
edition.workspace = true

[features]
# Full base-station/entity runtime. This remains the default for bluestation-bs
# and all existing FlowStation builds.
default = ["runtime"]

# Protocol-only consumers (notably netcore-control-room) can depend on
# tetra-entities with `default-features = false` and then get only the shared
# JSON/serde protocol enums: net_control commands, net_telemetry events and the
# net_control_room envelopes. No SDR, voice codec, QUIC/Brew or UI bridge code
# is compiled in that mode.
runtime = [
    "dep:tetra-saps",
    "dep:tetra-pdus",
    "dep:as-any",
    "dep:num",
    "dep:num-complex",
    "dep:rustfft",
    "dep:rand",
    "dep:crossbeam-channel",
    "dep:soapysdr",
    "dep:quinn",
    "dep:rustls",
    "dep:rustls-native-certs",
    "dep:tokio",
    "dep:tungstenite",
    "dep:reqwest",
    "dep:md5",
    "dep:base64",
    "dep:uuid",
    "dep:libc",
]

# Link the native TETRA speech codec for any media feature.
tetra-codec = ["runtime"]

# Compile the Asterisk SIP/RTP bridge.
asterisk = ["tetra-codec"]

# Compile the local WAV recorder and dashboard API.
recording = ["tetra-codec", "dep:libc"]

# Compile the local WAV/MP3 TETRA audio player and dashboard API.
audio-player = ["tetra-codec", "recording"]

[dependencies]
tetra-core = { workspace = true }
tetra-config = { workspace = true }
tetra-saps = { workspace = true, optional = true }
tetra-pdus = { workspace = true, optional = true }
as-any = { workspace = true, optional = true }
num = { workspace = true, optional = true }
num-complex = { workspace = true, optional = true }
rustfft = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true, optional = true }
soapysdr = { workspace = true, optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { workspace = true }
bitcode = { workspace = true }
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring"], optional = true }
rustls-native-certs = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time"], optional = true }
tungstenite = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
md5 = { version = "0.7", optional = true }
base64 = { version = "0.22", optional = true }
libc = { version = "0.2", optional = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
# HTTP client for the dashboard's GitHub update-check and the built-in WX/METAR service.
# rustls-tls (no OpenSSL) keeps cross-compilation to the Pi simple; blocking is fine since
# both uses run on their own short-lived threads.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"], optional = true }

[lints]
workspace = true
