[package]
name = "netcore-application-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "netcore-application-gateway"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
toml = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"

[lints]
workspace = true
