[package]
name = "netcore-ip-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "netcore-ip-gateway"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
chrono = { workspace = true }
libc = "0.2"
serde = { workspace = true }
serde_json = "1.0"
toml = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
