[package]
name = "netcore-kmf"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "netcore-kmf"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
sha2 = "0.10"
toml = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
