[package]
name = "netcore-media-library"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "netcore-media-library"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
toml = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
base64 = "0.22"

[lints]
workspace = true
