[package]
name = "netcore-observability"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "netcore-observability"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
toml = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
