[package]
name = "netcore-recorder"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "netcore-recorder"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
chrono = { workspace = true }
libc = "0.2"
serde = { workspace = true }
serde_json = "1.0"
sha2 = "0.10"
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
