[package]
name = "netcore-sds-router"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "netcore-sds-router"
path = "src/main.rs"

[dependencies]
tetra-entities = { path = "../../crates/tetra-entities", default-features = false }
clap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
toml = { workspace = true }
tungstenite = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
