[package]
name = "netcore-security-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "netcore-security-core"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
tetra-entities = { workspace = true }
sha2 = "0.10"
toml = { workspace = true }
tungstenite = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
