[package]
name = "netcore-transit"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "netcore-transit"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
toml = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
