[package]
name = "netcore-control-room-operator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "netcore-control-room-operator"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
chrono = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }

[lints]
workspace = true
