[package]
name = "netcore-control-room-ui"
version = "1.3.0"
edition = "2021"
description = "Native desktop UI for NetCore Control Room"

# This crate intentionally builds standalone with --manifest-path so the
# Control Room UI can be built on operator workstations without changing the
# FlowStation workspace membership.
[workspace]

[dependencies]
eframe = { version = "0.27", default-features = true }
egui_extras = { version = "0.27", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs-next = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
